--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -1,38 +1,38 @@
-// .app__about {
-//   flex: 1;
-//   width: 100%;
-//   flex-direction: column;
-// }
+.app__about {
+  flex: 1;
+  width: 100%;
+  flex-direction: column;
+}
 
 .app__profiles {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
   margin-top: 2rem;
+}
 
-  &-item {
-    display: flex;
-    width: 190px;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-direction: column;
-    margin: 2rem;
+.app__profile-item {
+  width: 190px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  margin: 2rem;
+
+  img {
+    width: 100%;
+    height: 170px;
+    border-radius: 15px;
+    object-fit: cover;
+  }
+
+  @media screen and (min-width: 2000px) {
+    width: 370px;
+    margin: 2rem 4rem;
 
     img {
-      width: 100%;
-      height: 170px;
-      border-radius: 17px;
-      object-fit: cover;
-    }
-
-    @media (min-width: 2000px) {
-      width: 360px;
-      margin: 2rem 4rem;
-
-      img {
-        height: 320px;
-      }
+      height: 320px;
     }
   }
 }
